# sdnmesh

./: .gitignore  .gitmodules
apps/qdock/: Makefile
apps/qdock/qdock/: Config.in  Makefile  VERSION_DESCRIPTION  qdock.mk  start_qdock
apps/qdock/qdock/app/: Makefile  app_list
apps/qdock/qdock/app/mapiq-1.1.11-ctc_controller/: Makefile  mapiq_version.h
apps/qdock/qdock/app/mapiq-1.1.11-ctc_controller/mapiq/: LICENSE  Makefile  csmd.mapagent.json  map_common.h  map_ctrl.h  map_dbg.h  map_extcfg.c  map_extcfg.h  map_extcfg_qtn.c  map_qdock.h  map_qtn.h  map_server.c  map_server.h  start_map  start_map_npu  start_mapagent  start_mapcontroller
apps/qdock/qdock/app/mapiq-1.1.11-ctc_controller/mapiq/qmesh/: Makefile
apps/qdock/qdock/app/mapiq-1.1.11-ctc_controller/mapiq/qmesh/include/: 1905_cmdus.h  1905_tlvs.h  map_80211.h  platform.h  platform_linux.h  utils.h
apps/qdock/qdock/app/mapiq-1.1.11-ctc_controller/mapiq/qmesh/src/: 1905_cmdus.c  CMakeLists.txt  al_cli.h  al_datamodel.c  al_extension.c  al_recv.h  al_retry.c  al_retry.h  al_send.c  al_send.h  al_ubus_server.c  al_ubus_server.h  ini.c  lldp_payload.c  map_80211.c  map_steering.c  map_steering.h  platform_crypto.h  platform_interfaces.h  tlv.c
apps/qdock/qdock/app/mapiq-1.1.11-ctc_controller/mapiq/qmesh/src/linux/: platform_interfaces.c  platform_interfaces_priv.h  platform_interfaces_qsr1000_priv.h  platform_os.c  platform_os_priv.h  platform_qdock.h
apps/qdock/qdock/app/mapiq-1.1.11-ctc_controller/mapiq/qmesh/src/linux/al_entity/: al_entity_main.c
apps/qdock/qdock/app/mapiq-1.1.11-ctc_controller/mapiq/qmesh/src/linux/hl_entity/: hl_entity_main.c
apps/qdock/qdock/qdock-1.3.21-ctc_controller/src/: Makefile
apps/qdock/qdock/qdock-1.3.21-ctc_controller/src/csm/: Makefile  README  SPDIA.csmd.json  SPDIA_SONiQ.csmd.json  cfg_ext.h  cfg_ext_qtn.c  cfg_update_example.c  comm_inactive.c  csm_core.c  csm_helper.c  csm_log.c  csm_message.c  csm_plugin.c  csm_test.c  csm_timer.c  csm_utils.c  csmd.c  csmd.json  csmd_cli.c  csmd_cli.h  driver_qtn_gennl.c  driver_qtn_netlink.c  logic_sample1.c  misc_csmd_cli.c  qsteer_comm_ext.c  version.h
apps/qdock/qdock/qdock-1.3.21-ctc_controller/src/csm/include/: csm.h  csm_core.h  csm_helper.h  csm_message.h  csm_plugin.h  csm_test.h  csm_utils.h  ieee80211_def.h  list.h  qsteer.h  wifi_def.h
apps/qdock/qdock/qdock-1.3.21-ctc_controller/src/csm/spdia/: Makefile  spdia_cli.c  spdia_cli.h  spdia_common.h  spdia_ctrl.c  spdia_dbg.h  spdia_dump.c  spdia_qtn.c  spdia_qtn.h  start_spdia
apps/qdock/src/1.1.11-ctc_controller/buildroot/package/qdock/app/mapiq-1.1.11-ctc_controller/mapiq/: map_api.h  map_ctrl.c  map_extcfg_qtn.h  map_qdock.c  map_qtn.c  map_qtn_rpc.c  start_mapagent_npu  start_mapcontroller_npu
apps/qdock/src/1.1.11-ctc_controller/buildroot/package/qdock/app/mapiq-1.1.11-ctc_controller/mapiq/qmesh/: .gitreview  CMakeLists.txt  map_conf.json.example
apps/qdock/src/1.1.11-ctc_controller/buildroot/package/qdock/app/mapiq-1.1.11-ctc_controller/mapiq/qmesh/include/: datamodel.h  dlist.h  hlist.h  tlv.h
apps/qdock/src/1.1.11-ctc_controller/buildroot/package/qdock/app/mapiq-1.1.11-ctc_controller/mapiq/qmesh/src/: 1905_tlvs.c  CMakeLists.txt  al.h  al_cli.c  al_datamodel.h  al_entity.c  al_recv.c  al_wsc.c  al_wsc.h  bbf_recv.c  bbf_send.c  bbf_tlvs.c  datamodel.c  hlist.c  ini.h  platform_os.h  qdock_map_api.h  ubus_map.c  ubus_map.h  ubus_map_config.c  ubus_map_controller.c  ubus_map_local.c  ubus_map_network.c
apps/qdock/src/1.1.11-ctc_controller/buildroot/package/qdock/app/mapiq-1.1.11-ctc_controller/mapiq/qmesh/src/linux/: platform.c  platform_alme_server.c  platform_crypto.c  platform_interfaces_qsr1000.c  platform_local.c  platform_local.h  platform_qdock.c  platform_uci.c
apps/qdock/src/1.1.11-ctc_controller/buildroot/package/qdock/app/mapiq-1.1.11-ctc_controller/mapiq/qmesh/src/linux/al_entity/: al_entity_main.c
libs/json-c/: Makefile
libs/json-c/json-c-0.12.1.bak/: configure.ac
libs/libjson/: Makefile
libs/libubox/: Makefile
libs/ubus/: Makefile  Makefile.ubus
libs/zlib/: Makefile
libs/zlib/zlib/: Makefile  adler32.lo  compress.lo  crc32.lo  deflate.lo  example  example64  examplesh  gzclose.lo  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inffast.lo  inflate.lo  inftrees.lo  libz.so.1.2.11  minigzip  minigzip64  minigzipsh  trees.lo  uncompr.lo  zlib.pc  zutil.lo
